assets/calico/dynatrace-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dynatrace-pods
  namespace: dynatrace
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dynatrace-operator
      app.kubernetes.io/managed-by: dynatrace-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    # from any ip
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    # from webhook ports
    - protocol: TCP
      port: 8383
    - protocol: TCP
      port: 8384
    - protocol: TCP
      port: 8443
    # from operator ports
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 10080
  egress:
  - to:
    # to any ip
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    # to external via HTTPS
    - protocol: TCP
      port: 443
    # to webhook ports
    - protocol: TCP
      port: 8383
    - protocol: TCP
      port: 8384
    - protocol: TCP
      port: 8443
    # to operator ports
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 10080
  # Allow DNS lookup
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  # Allow external traffic for e.g. Cluster API requests
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # blocks private ips, i.e. blocks Pod to Pod communication
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
    ports: []
